--- a/templates/categoryDialog.hbs
+++ b/templates/categoryDialog.hbs
@@ -6,9 +6,9 @@
     </div>
 
     <div class="form-group">
-        <label for="viewOrSpellbook">{{localize "SPELL_BETTER.NewCategory.ViewOrSpellbook.NAME"}}</label>
+        <label for="categoryType">{{localize "SPELL_BETTER.NewCategory.ViewOrSpellbook.NAME"}}</label>
         <div class="form-fields">
-            <select name="viewOrSpellbook">
+            <select name="categoryType">
                 {{selectOptions types selected=selectedType localize=true}}
             </select>
         </div>    
