--- a/templates/parts/actor-spellbook.hbs
+++ b/templates/parts/actor-spellbook.hbs
@@ -54,6 +54,7 @@
                 {{/with}})
             {{/if}}
         </li>
+        <li class="filter-item tag" data-filter="innate">{{localize "SPELL_BETTER.Innate"}}</li>
     </ul>
     <ul class="filter-list flexrow" data-filter="spellbook">
         <li class="filter-set">{{localize "SPELL_BETTER.DurationOr"}}:</li>
