--- a/templates/parts/actor-spellbook.hbs
+++ b/templates/parts/actor-spellbook.hbs
@@ -66,7 +66,7 @@
         <li class="filter-set">{{localize "SPELL_BETTER.LevelOr"}}:</li>
         {{#each filters.choices.levels as |fl|}}
             <li class="filter-item tag" data-filter="{{fl.label}}">
-                {{localize fl.name}} {{#if @index}}{{#with (lookup @root.spellbook @index)}} {{uses}}/{{slots}} {{/with}}{{/if}}
+                {{localize fl.name}} {{#if fl.slots}} {{fl.uses}}/{{fl.slots}}{{/if}}
             </li>
         {{/each}}       
     </ul>
