--- a/templates/parts/actor-spellbook.hbs
+++ b/templates/parts/actor-spellbook.hbs
@@ -136,7 +136,7 @@
                 <div class="item-controls">
                     {{#if section.canCreate}}
                         <a class="spell-control spell-create" title="{{localize 'DND5E.SpellCreate'}}" data-category="{{@key}}">
-                            <i class="fas fa-plus"></i> {{localize "DND5E.Add"}}
+                            <i class="fas fa-plus"></i> {{localize "SPELL_BETTER.AddSpell"}}
                         </a>
                     {{/if}}
                     {{#if section.isCustom}}
